# wgsl_linker

./: Cargo.toml  Readme.md
src/: global_item.rs  lib.rs  linker.rs  mangling.rs  parsed_module.rs  parser.rs  parser_output.rs  rewriter.rs  token.rs  tokenizer.rs
src/linker/: filesystem.rs  mangling.rs  parsed_module.rs
src/parser/: ast_iter.rs  parser_output.rs  rewriter.rs  span.rs  token.rs  tokenizer.rs
tests/: basic_tests.rs  linking.rs  mangling.rs  tokenizer.rs
