[package]
name = "wgsl_linker_reference"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
winnow = { version = "0.6.18" }
unicode-ident = "1.0"
slotmap = "1.0"
indexmap = "2.3.0"

[dev-dependencies]
proptest = "1.5.0"
test-strategy = "0.4.0"

[features]
default = []
trace = ["winnow/debug"]
